--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cron": "^1.1.1",
+    "axios": "^1.7.8",
+    "elysia": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "bun-types": "latest"
   },
   "module": "src/index.js"
